k8s/custom-scaling-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-scaling-server-service # Tên Service (ngắn gọn)
  labels:
    app: custom-scaling-server-service
spec:
  type: ClusterIP # Loại Service (để test từ ngoài)
  selector:
    app: custom-scaling-server # <--- QUAN TRỌNG: Phải khớp với label của Pod trong Deployment
  ports:
    - port: 1208 # Cổng của Service (Frontend gọi vào đây)
      targetPort: 1208 # Cổng của Container (Code Node/Python của bạn)
