k8s/demo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-svc
  labels:
    app: demo-app
    monitor: "true"
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - name: http
      port: 8080
      targetPort: 3000
