k8s/forecasting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forecasting-service-deployment
  labels:
    app: forecasting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forecasting-service
  template:
    metadata:
      labels:
        app: forecasting-service
    spec:
      nodeSelector:
        role: infra
      tolerations:
        - key: role
          operator: Equal
          value: infra
          effect: NoSchedule
      containers:
        - name: forecasting-service-container
          image: docker.io/boygioi/forecasting-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: forecasting-service
  labels:
    app: forecasting-service
spec:
  type: ClusterIP
  selector:
    app: forecasting-service
  ports:
    - port: 8080
      targetPort: 8080
