k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP # Phải là NodePort để bạn truy cập từ browser
  selector:
    app: frontend
  ports:
    - port: 80 # Cổng Service (Web thường chạy port 80)
      targetPort: 80 # Cổng Container (Nơi server frontend chạy)
