k8s/io-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: io-service
  labels:
    app: io-service
    monitor: "true"
spec:
  type: ClusterIP
  selector:
    app: io-service
  ports:
    - port: 8080
      name: http
      targetPort: 3000
