k8s/system-showcase.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-showcase-deployment
  labels:
    app: system-showcase
    role: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: system-showcase
  template:
    metadata:
      labels:
        app: system-showcase
        role: infra
    spec:
      serviceAccountName: system-showcase
      nodeSelector:
        role: infra
      tolerations:
        - key: role
          operator: Equal
          value: infra
          effect: NoSchedule
      containers:
        - name: system-showcase-container
          image: docker.io/boygioi/system-showcase:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: system-showcase-svc
  labels:
    app: system-showcase
spec:
  type: ClusterIP
  selector:
    app: system-showcase
  ports:
    - name: http
      port: 8080
      targetPort: 8080
