k8s/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  annotations:
    # Logic Rewrite giữ nguyên cho Backend
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-access-log: "true"
spec:
  rules:
    - host: autoscaling-k8s-test # (Hoặc my-app.local tùy bạn chọn)
      http:
        paths:
          # Rule cho Prime
          - path: /api/prime/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: prime-service
                port:
                  number: 8080
          # Rule cho Text
          - path: /api/text/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: text-service
                port:
                  number: 8080
