k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
spec:
  rules:
    - host: autoscaling-k8s-test
      http:
        paths:
          # LUẬT 1: FRONTEND (Ưu tiên thấp nhất, để cuối)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80 # Port của Service Frontend
