k8s/ingress-healthz.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-healthz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: prime-service
                port:
                  number: 8080
