k8s/system-showcase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-showcase-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-access-log: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /system-showcase
            pathType: Prefix
            backend:
              service:
                name: system-showcase-svc
                port:
                  number: 8080
